Footer + spacing fix for index

--- a/style/format.css
+++ b/style/format.css
@@ -101,6 +101,7 @@ a:active {
 
 .content {
 	/* Nothing to do atm */
+	padding-bottom: 100px;
 }
 
 .footer {
@@ -108,6 +109,8 @@ a:active {
 	font-size: 20px;
 	text-align: center;
 
+	position: absolute;
+	bottom: 1px;
 	height: 50px;
 	width: 100%;
 	padding: 10px 10px 10px 10px;
