--- a/style/index.css
+++ b/style/index.css
@@ -37,7 +37,7 @@
 		margin-left: 1.5em;
 		margin-right: 1.5em;
 		text-align: justify;
-		font-size: 1.5em;
+		font-size: 6vw;
 		overflow: hidden;
 		line-height: 120%;
 	}
@@ -55,7 +55,7 @@
 		margin-left: 1%;
 		margin-right: 1%;
 		margin-bottom: 1%;
-		margin-top: 2%;
+		margin-top: 4%;
 		width: 30%;
 		max-width: 500px;
 
